--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 plugins {
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 }
 
 application {
@@ -18,11 +20,3 @@ application {
 tasks.named('test') {
     useJUnitPlatform()
 }
-
-shadowJar {
-    manifest {
-        attributes 'Main-Class': 'rce.RaceConditionExample'
-    }
-}
-
-mainClassName = 'rce.RaceConditionExample'
